--- a/package.json
+++ b/package.json
@@ -7,13 +7,44 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@iconify-json/lucide": "^1.2.66",
+    "@iconify-json/simple-icons": "^1.2.50",
     "@nuxt/content": "3.6.3",
     "@nuxt/image": "1.11.0",
+    "@nuxt/ui": "4.0.0-alpha.1",
+    "@nuxtjs/i18n": "^10.0.6",
+    "@unhead/vue": "^2.0.14",
+    "@vueuse/nuxt": "13.9.0",
+    "better-sqlite3": "^12.2.0",
+    "motion-v": "^1.7.1",
     "nuxt": "^4.1.0",
-    "vue": "^3.5.20",
+    "nuxt-og-image": "5.1.9",
+    "unstorage": "^1.17.1",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^5.2.2",
+    "eslint": "^9.34.0",
+    "eslint-plugin-format": "^1.0.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3",
+      "sharp"
+    ],
+    "ignoredBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild",
+      "vue-demi"
+    ],
+    "overrides": {
+      "vite": "npm:rolldown-vite@latest"
+    }
   }
 }
