--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nuxt-og-image": "5.1.9",
     "unstorage": "^1.17.1",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-tsc": "^3.0.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.2",
