--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@vueuse/nuxt": "13.9.0",
     "better-sqlite3": "^12.2.0",
     "motion-v": "^1.7.1",
-    "nuxt": "^4.1.0",
     "nuxt-og-image": "5.1.9",
     "unstorage": "^1.17.1",
     "vue": "^3.5.21",
@@ -34,7 +33,8 @@
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.2",
     "eslint": "^9.34.0",
-    "eslint-plugin-format": "^1.0.1"
+    "eslint-plugin-format": "^1.0.1",
+    "nuxt": "^4.1.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
