--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "vue-tsc": "^3.0.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.3.0",
+    "@hrcd/eslint-config": "^3.0.3",
     "eslint": "^9.35.0",
-    "eslint-plugin-format": "^1.0.1",
     "husky": "^9.1.7",
     "nuxt": "^4.1.1"
   },
