--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "nuxt-app",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@10.15.1",
+  "packageManager": "pnpm@10.16.1",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --port 3001 --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -15,12 +15,11 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.66",
-    "@iconify-json/simple-icons": "^1.2.50",
+    "@iconify-json/lucide": "^1.2.68",
+    "@iconify-json/simple-icons": "^1.2.52",
     "@nuxt/content": "3.6.3",
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "4.0.0-alpha.1",
-    "@nuxtjs/i18n": "^10.0.6",
     "@unhead/vue": "^2.0.14",
     "@vueuse/nuxt": "13.9.0",
     "better-sqlite3": "^12.2.0",
@@ -29,13 +28,14 @@
     "unstorage": "^1.17.1",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
-    "vue-tsc": "^3.0.6"
+    "vue-tsc": "^3.0.7"
   },
   "devDependencies": {
     "@hrcd/eslint-config": "^3.0.3",
+    "@nuxtjs/i18n": "10.1.0",
     "eslint": "^9.35.0",
     "husky": "^9.1.7",
-    "nuxt": "^4.1.1"
+    "nuxt": "^4.1.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
@@ -46,9 +46,6 @@
       "@parcel/watcher",
       "esbuild",
       "vue-demi"
-    ],
-    "overrides": {
-      "vite": "npm:rolldown-vite@latest"
-    }
+    ]
   }
 }
